- Changed: re-fix the popup conflict. - Changed: re-hide the horizontal scroll bar.

--- a/website/wp-content/themes/Cairo-Jazz-Club/css/main-rtl.css
+++ b/website/wp-content/themes/Cairo-Jazz-Club/css/main-rtl.css
@@ -5282,6 +5282,13 @@ form span {
   background-size: cover;
 }
 
+/**************************************************
+ *	fix magnific popup conflixt bug with scrolling
+***************************************************/
+.hide-horizontal-scrollbar {
+  overflow-x: hidden !important;
+}
+
 /*******************************************
  *	FORMS
  *******************************************/
